--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: white;
+  border-bottom: solid 1px rgb(222, 222, 222);
 }
 
 .left-section {
@@ -13,7 +20,7 @@
 .hamburger-menu {
   height: 24px;
   margin-left: 24px;
-  margin-right: 20px;
+  margin-right: 24px;
 }
 
 .youtube-logo {
@@ -24,7 +31,7 @@
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
-  max-width: 500px;
+  max-width: 475px;
   display: flex;
   align-items: center;
 }
@@ -32,9 +39,9 @@
 .search-bar {
   flex: 1;
   height: 36px;
-  padding-left: 10px;
+  padding-left: 12px;
   font-size: 16px;
-  border: solid 1px rgb(192, 192, 192);
+  border: solid 1px rgb(204, 204, 204);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
   width: 0;
@@ -48,14 +55,14 @@
 .search-button {
   height: 40px;
   width: 66px;
-  background-color: rgb(240, 240, 240);
-  border: solid 1px rgb(192, 192, 192);
+  background-color: rgb(247, 247, 247);
+  border: solid 1px rgb(204, 204, 204);
   margin-left: -1px;
   margin-right: 10px;
 }
 
 .search-icon {
-  height: 25px;
+  height: 24px;
   margin-top: 4px;
 }
 
@@ -64,7 +71,7 @@
   width: 40px;
   border-radius: 20px;
   border: none;
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(248, 248, 248);
 }
 
 .voice-search-icon {
@@ -73,8 +80,8 @@
 }
 
 .right-section {
-  width: 180px;
-  margin-right: 20px;
+  width: 182px;
+  margin-right: 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -91,6 +98,29 @@
 
 .notifications-icon {
   height: 24px;
+}
+
+.notifications-icon-container {
+  position: relative;
+}
+
+.notifications-count {
+  position: absolute;
+  top: -3px;
+  right: -7px;
+  background-color: rgb(200, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  border-radius: 80px;
+  border: solid 2px white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .current-user-picture {
