--- a/styles/header.css
+++ b/styles/header.css
@@ -61,9 +61,47 @@
   margin-right: 10px;
 }
 
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-tooltip {
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-tooltip .tooltip {
+  font-family: Roboto, Arial;
+  position: absolute;
+  background-color: rgb(95, 95, 95);
+  color: white;
+  padding: 10px 8px;
+  border-radius: 2px;
+  font-size: 12px;
+  bottom: -50px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-tooltip:hover .tooltip {
+  opacity: 0.9;
+}
+
 .search-icon {
   height: 24px;
-  margin-top: 4px;
 }
 
 .voice-search-button {
@@ -126,4 +164,8 @@
 .current-user-picture {
   height: 32px;
   border-radius: 16px;
+}
+
+.current-user-picture:hover {
+  cursor: pointer;
 }
